# bot-mont-shk

./: .env.example  .gitignore  Bot_Telegram_SHK_bez_dv_1.1.py  CHANGELOG.md  README.md  main.py  main_web.py  pyproject.toml  requirements-dev.txt  requirements.txt  web_main.py
.github/workflows/: ci.yml
bot/: config.py  constants.py  db.py  handlers.py  logging_config.py  runtime.py  telegram_ai.py
bot/services/: ai_assistant.py  ai_assistant_sources.py  block_ids.py  case_sync.py  excel.py  excel_24h.py  file_sources.py  no_move_map.py  ollama_client.py  processing.py  raw_review.py  search_service.py  sheets.py  warehouse_delay.py  workflows.py  yadisk.py  yadisk_ingest.py
data/: README.md  block_ids.txt  block_ids.txt.example  last_no_move_map.json  last_no_move_meta.json
deploy/: anniland.nginx.conf  bot-mont-shk-bot.service  bot-mont-shk-web.service
deploy/nginx/: anniland.ru.conf
deploy/systemd/: anniland-web.service  bot-mont-shk-bot.service
docs/: db_stage1.md  db_stage2.md  db_stage3.md  db_stage5.md  db_stage6.md
legacy/: Bot_Telegram_SHK_bez_dv_1.1.py
scripts/: setup-dev.ps1  setup-dev.sh
tests/: conftest.py  test_ai_assistant.py  test_ai_context.py  test_ai_handlers.py  test_ai_provider.py  test_ai_sources.py  test_excel.py  test_processing_yadisk_progress.py  test_stage4_regression.py  test_stage5_review.py  test_stage6_search.py  test_warehouse_delay.py  test_web_app.py  test_workflows.py  test_yadisk.py
web/: app.py  auth.py  dependencies.py  rate_limit.py  security.py  session.py
web/routes/: actions.py  pages.py
(+18 files in other folders)
