[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bot-mont-shk"
version = "1.0.0"
requires-python = ">=3.11"
description = "Telegram-бот и общая логика обработки (Google Sheets, Excel, Я.Диск)."
readme = "README.md"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
where = ["."]
include = ["bot*"]
exclude = ["legacy*", "tests*"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["bot", "tests", "."]
exclude = [".venv", "legacy"]

[tool.ruff.lint]
# CI uses --select F,E9; expand locally when ready
select = ["F", "E9"]

[tool.ruff.format]
quote-style = "double"
